# physics-applets

./: .gitignore  README.md
physics-applets/: pyproject.toml
physics-applets/physics_applets/electrostatics/: chargedistr.py  electrosystem.py
physics-applets/tests/: test_physics_applets.py
