[tool.poetry]
name = "physics-applets"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
sympy = "^1.11"
scipy = "^1.9.1"
numpy = "^1.23.2"
pandas = "^1.4.3"
plotly = "^5.10.0"
streamlit = "^1.12.2"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.4.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
